--- a/KomisyonNET/FormProgress.resx
+++ b/KomisyonNET/FormProgress.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABILAAASCwAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wCpd8qsoVnTwKFZ08CdTNTIjEO8y5NVu8CPT7m4cw+4ZP///wD///8A////AP//
+        /wDo5+YQxptkssSRTcDEkU3Ay5U3z+3IRsTuyk3A7slGuOSqAEr///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A6OfmgHclrf94F7v/fhLK/4oj0f94G7X/aAyl/20UqP+BGsjrfhLKEP//
+        /wD///8A////AOHYzpenXw3/tGoI/7JmAP+/fRL/7bsV//G8AP/vvQ7/3KIH6f///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AOjn5hCmdsT4aAyl/20UqP99Esj/iAXf/4cC3v9oDKX/eBe7/34S
+        yv9+EsqA////AP///wDo5+YgxZ5z/6JWAP+vZw7/smYA/9WWAP/gpQD/8bwA/+OrCf/anQD/2p0AcP//
+        /wD///8A////AP///wD///8A////AP///wD///8A39Hlpn0ptf97KLL/eSax/YMlw/adLebvnS3m73w/
+        vv9qWLv/ali7/1pSsO8nTn0g////AOjn5qChXCf/oVwn/6FcJ/+0cRf63awt792sLe/YoyL/x4oc/8eK
+        HP+/fAzqolYAEP///wD///8A////AP///wD///8A////AOjn5jCuWeL/ihnV/34Syv+BGcv4fhLKIP//
+        /wD///8A1trfl0dvqv89aKb/PWSY/i5Tgab///8A6OfmILaIcP+QPxX/l0sg/6ZeCPimXAAg////AN7P
+        vKy1bg7/smYA/6tiB/6lXQuX////AP///wD///8A////AP///wD///8A0rLlzIsE4P+LBOD/hBzN/X4S
+        yoD///8A////AP///wDo5+YQmq3J90Zup/8oUID/J059/ydOfUD///8A39XQl5VIIP+gVhH/plwA/6tm
+        EKz///8A6OfmIM2mc/+0bQ7/olYA/6JWAP+iVgAg////AP///wD///8A////AOjn5lCeNuT/kSXZ/5El
+        2f+KF9XlfhLKEP///wCl39OsNdKyUP///wDo5+ZwV3eh/0hrmP9Ia5j/Qmmgz////wDo5+YQxZhh+cWJ
+        HP/FiRz/xoYT9dWYGUD///8A4tjLiKJeMP+dViz/nVYs/6RbDM3///8A////AP///wD///8AyJjo6osA
+        6/+HEdr/fhLK/34SymD///8A6OfmYFbWvP8907TqNdKyEP///wC2wc7oM1uQ/z5lm/89aKb/PWimYP//
+        /wDo5+ZwyY0c/8WBAP/PkRX/1p4p0P///wDo5+YQxaWU9pA/Ff+hWBf/plwA/6ZcAED///8A////AOjn
+        5oCWHOr/iwDr/44J6v+FHc7P////AOjn5hCi39L2NdKy/zXSsv810rKA////AOjn5kBefaX/Qmyo/z1o
+        pv9EbanqPWimEP///wDey6foyIkP/9WYGf/VmBn/1ZgZYP///wDo5+ZgpmdA/6hhCv+mXAD/qmQN3P//
+        /wD///8A0M/crErBhv9CwoD/QsKA/0a6m7////8A6OfmIHnUs/88yJX/PMiV/0y/ZvNKszcg////ALXA
+        0M8zW5D/M1uQ/zBYi/8pUYGX////AOjn5kDswTT/8bwA//G8AP/ttgSY////AOjn5kBhUKD/MRxu/zEc
+        bv82IW74////AP///wDo5+YQktSx+ELCgP9Px5D/PMmY/zzJmDD///8A1uPcl0nHkP9JwXT/SrM3/1C1
+        Pab///8A6OfmIIKYtf8zW5D/M1iF/y1TgPgnTn0g////AOngwcjxvAD/8b4M7PG8ABD///8ArKnZ3BoT
+        uf8jH6X/CgeT/woHk3D///8A////AP///wDo5+aAUsaN/zzJlv88yZj/P8ue2P///wDo5+YQm9i991G2
+        Q/9Kszf/SrM3/0imJGL///8A1djdlzhdiv8nTn3/J059/ypQfbv///8A6OfmIO7MVeTxvABg////AOjn
+        5mA/Ocj/GxS+/xsUvf8UEJ/s////AP///wD///8A////AOjn5hCd4NbsMNa+/zDWvv8x3dP6I97WQP//
+        /wDo5+ZwYKYc/02dAP9HkgD/P3kK1f///wDo5+YQjZ2v9yBEbv8gRG7/JkVp9hg5XkD///8A////AP//
+        /wDo5+YQm5fo9jIr5P8fGM3/HxjN/x8YzVD///8A////AP///wD///8A////AOjn5mBd2sj/M9nH/yPe
+        1v8q3tfo////AP///wC906foTZ0A/0eAEv82cgD/NnIAYP///wDo5+ZwOFh9/yRGbP8YOV7/JENmzP//
+        /wD///8A////ANHP54g8Nev/JBzs/yAZ1f8nIM7I////AP///wD///8A////AP///wD///8A////ALDi
+        2tAt3tX/I97W/yPe1v9G2MS1idKscKbYvaBWlyH/NnIA/zZyAP88dgfv////AP///wCxusXoHT5i/xg5
+        Xv8YOV7/NmaTtXev7XCHt+yCfYTq/yQc7P8kHOz/KyPq+B8YzTD///8A////AP///wD///8A////AP//
+        /wD///8A6OfmQHXczf8w1r7/M9O0/0HKmv9CwoL/QsF7/0utO/9Fkw3/RIsA/02QDbr///8A////AOjn
+        5kBEXHf/Di9T/xJMfP8po/L/I4jy/yOG8v9Nm+9me47rbneH63B3h+twI0DuIP///wD///8A////AP//
+        /wD///8A////AP///wD///8AxuTfrDvXwP9KzqX/PMmY/0zJlv9OuGD/R6s0/1SsPf9EiwD/RIsAIP//
+        /wD///8A////AMXJzsgOL1P/KaDr/x6j9v8sm/T/K4ryyMjS6MguWu//I0Du/yNA7v8jQO5Q////AP//
+        /wD///8A////AP///wD///8A////AP///wDo5+YgedrG41vPp/Bez6fvVs2i81y2WPRnt1fvYrVS7Uyc
+        H5v///8A////AP///wD///8A6OfmIFqSuudDrvDwRrDz7zeo9OSKuexkU4Xu/yJl8f8vTO7/L0ruzP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AMDM6J5Jfu/vSX7v7zdo
+        7+iKl+pkVU/h/x8Yzf8tJ8+s////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AOjn
+        5iBus++4TrPyqKm56ekkHOz/LCbV8B8YzSD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AxNXorCOI8v8novXX////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A/////////////////////////////////APAH/gBwB/wAYAP8ACAB+Bg
+        gQfg4EEDwJBAg8EIIIGCCBBBggQQQYEECEHBAgiDwIIHA+DBBwfwAYAH8AGAB/gBwAf4A8AP///+Af//
+        /wH///8f//////////////////////////8=
+</value>
+  </data>
 </root>
