--- a/KomisyonNET/Properties/Resources.resx
+++ b/KomisyonNET/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="logo32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo32.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo-dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo-light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ptLogoDark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ptLogoDark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
